--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "typescript-lib-template",
   "version": "0.0.0",
   "description": "A TypeScript library template",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
+  "scripts": {
+    "build": "tsc",
+    "test": "jest"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fvilers/typescript-lib-template.git"
@@ -15,5 +21,12 @@
   "bugs": {
     "url": "https://github.com/fvilers/typescript-lib-template/issues"
   },
-  "homepage": "https://github.com/fvilers/typescript-lib-template#readme"
+  "homepage": "https://github.com/fvilers/typescript-lib-template#readme",
+  "devDependencies": {
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-typescript": "^7.17.12",
+    "@types/jest": "^27.5.1",
+    "jest": "^27.5.1",
+    "typescript": "^4.7.2"
+  }
 }
