Set publish access to public

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "prepare": "npm run build",
     "test": "jest"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fvilers/typescript-lib-template.git"
